Word flip size can be specified now. Instead of an optional boolean to indicate word flipping and a word size of 8 bits, there is now an optional word size parameter that specifies the number of bits to flip per fault. The default value is 1, which results in only a single bit flip per fault.

--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -91,7 +91,36 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-09-19 20:18:00--  https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB_Final_Test_Images.zip\n",
+      "Resolving sid.erda.dk (sid.erda.dk)... 130.225.104.13\n",
+      "Connecting to sid.erda.dk (sid.erda.dk)|130.225.104.13|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 88978620 (85M) [application/zip]\n",
+      "Saving to: ‘GTSRB_Final_Test_Images.zip’\n",
+      "\n",
+      "GTSRB_Final_Test_Im 100%[===================>]  84.86M  4.22MB/s    in 16s     \n",
+      "\n",
+      "2020-09-19 20:18:19 (5.22 MB/s) - ‘GTSRB_Final_Test_Images.zip’ saved [88978620/88978620]\n",
+      "\n",
+      "--2020-09-19 20:18:36--  https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB_Final_Test_GT.zip\n",
+      "Resolving sid.erda.dk (sid.erda.dk)... 130.225.104.13\n",
+      "Connecting to sid.erda.dk (sid.erda.dk)|130.225.104.13|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 99620 (97K) [application/zip]\n",
+      "Saving to: ‘GTSRB_Final_Test_GT.zip’\n",
+      "\n",
+      "GTSRB_Final_Test_GT 100%[===================>]  97.29K   336KB/s    in 0.3s    \n",
+      "\n",
+      "2020-09-19 20:18:37 (336 KB/s) - ‘GTSRB_Final_Test_GT.zip’ saved [99620/99620]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists(\"/home/xilinx/jupyter_notebooks/bnn/GTSRB_Final_Test_Images.zip\"):\n",
     "    !wget https://sid.erda.dk/public/archives/daaeac0d7ce1152aea9b61d9f1e19370/GTSRB_Final_Test_Images.zip\n",
@@ -122,7 +151,25 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-09-19 20:19:08--  http://ufldl.stanford.edu/housenumbers/test_32x32.mat\n",
+      "Resolving ufldl.stanford.edu (ufldl.stanford.edu)... 171.64.68.10\n",
+      "Connecting to ufldl.stanford.edu (ufldl.stanford.edu)|171.64.68.10|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 64275384 (61M) [text/plain]\n",
+      "Saving to: ‘test_32x32.mat’\n",
+      "\n",
+      "test_32x32.mat      100%[===================>]  61.30M  10.9MB/s    in 9.3s    \n",
+      "\n",
+      "2020-09-19 20:19:18 (6.62 MB/s) - ‘test_32x32.mat’ saved [64275384/64275384]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if not os.path.exists(\"/home/xilinx/jupyter_notebooks/bnn/test_32x32.mat\"):\n",
     "    !wget http://ufldl.stanford.edu/housenumbers/test_32x32.mat\n",
@@ -146,12 +193,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-03-03 03:31:03--  http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Resolving yann.lecun.com (yann.lecun.com)... failed: Temporary failure in name resolution.\n",
-      "wget: unable to resolve host address ‘yann.lecun.com’\n",
-      "--2020-03-03 03:31:03--  http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Resolving yann.lecun.com (yann.lecun.com)... failed: Temporary failure in name resolution.\n",
-      "wget: unable to resolve host address ‘yann.lecun.com’\n"
+      "--2020-09-19 20:19:47--  http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Resolving yann.lecun.com (yann.lecun.com)... 2606:4700:3036::ac43:ab4c, 2606:4700:3031::681c:6cc, 2606:4700:3033::681c:7cc, ...\n",
+      "Connecting to yann.lecun.com (yann.lecun.com)|2606:4700:3036::ac43:ab4c|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1648877 (1.6M) [application/x-gzip]\n",
+      "Saving to: ‘t10k-images-idx3-ubyte.gz’\n",
+      "\n",
+      "t10k-images-idx3-ub 100%[===================>]   1.57M  7.03MB/s    in 0.2s    \n",
+      "\n",
+      "2020-09-19 20:19:47 (7.03 MB/s) - ‘t10k-images-idx3-ubyte.gz’ saved [1648877/1648877]\n",
+      "\n",
+      "--2020-09-19 20:19:47--  http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Resolving yann.lecun.com (yann.lecun.com)... 2606:4700:3033::681c:7cc, 2606:4700:3031::681c:6cc, 2606:4700:3036::ac43:ab4c, ...\n",
+      "Connecting to yann.lecun.com (yann.lecun.com)|2606:4700:3033::681c:7cc|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 4542 (4.4K) [application/x-gzip]\n",
+      "Saving to: ‘t10k-labels-idx1-ubyte.gz’\n",
+      "\n",
+      "t10k-labels-idx1-ub 100%[===================>]   4.44K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2020-09-19 20:19:47 (49.4 MB/s) - ‘t10k-labels-idx1-ubyte.gz’ saved [4542/4542]\n",
+      "\n"
      ]
     }
    ],
@@ -183,41 +246,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Availabe params: ['cifar10', 'road-signs', 'streetview']\n",
-      "Classifying 1000 images with cnvW1A1-cifar10\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/bnn/bnn.py:179: UserWarning: implicit cast from 'char *' to a different pointer type: will be forbidden in the future (check that the types are as you expect; use an explicit ffi.cast() if they are correct)\n",
-      "  path.encode(), len(self.classes), size_ptr, usecperimage, num_faults, 1 if flip_word else 0, target_type, targets, len(target_layers)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inference took 1582000.00 microseconds, 1582.00 usec per image\n",
-      "Classification rate: 632.11 images per second\n",
-      "Accuracy: 59.1\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Availabe params:\", bnn.available_params(bnn.NETWORK_CNVW1A1))\n",
+    "# print(\"Availabe params:\", bnn.available_params(bnn.NETWORK_CNVW1A1_RESILIENT_INTERLEAVED))\n",
     "\n",
     "# Instantiate the cnvW1A1 hardware classifier with the CIFAR10 dataset\n",
-    "classifier = bnn.CnvClassifier(bnn.NETWORK_CNVW1A1, 'cifar10', bnn.RUNTIME_HW)\n",
+    "classifier = bnn.CnvClassifier(bnn.NETWORK_CNVW1A1_RESILIENT_INTERLEAVED, 'cifar10', bnn.RUNTIME_HW)\n",
     "\n",
     "# Classify the dataset, and inject 10000 MBUs, targeting both weights and thresholds in the first 3 layers.\n",
     "#\n",
@@ -226,7 +261,7 @@
     "# target_type determines if weights or thresholds will be targeted. A value of -1 causes both to be targeted, a value\n",
     "# of 0 causes weights to be targeted, and a value of 1 will target thresholds.\n",
     "print(\"Classifying\", len(cifar_labels), \"images with\", classifier.net + \"-\" + classifier.params)\n",
-    "results = classifier.classify_cifars_with_faults(cifar_files, num_faults=10000, flip_word=True, target_type=-1, target_layers=[0, 1, 2])\n",
+    "results = classifier.classify_cifars_with_faults(cifar_files, num_faults=0, word_size=True, target_type=-1, target_layers=[0, 1, 2])\n",
     "\n",
     "# Calculate the accuracy of the network\n",
     "accuracy = bnn.util.calculate_accuracy(results, cifar_labels)\n",
@@ -250,17 +285,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from bnn.faults import FaultTest, CNVFaultTest\n",
     "\n",
     "# Create an instance of the CNVFaultTest class that uses the cnvW1A1 network with the CIFAR-10 testset\n",
     "cnv_test = CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1, cifar_files, cifar_labels)\n",
     "\n",
-    "# Test the network, accepting the default values for flip_word, target_type, and target_layers\n",
+    "# Test the network, accepting the default values for word_size, target_type, and target_layers\n",
     "results, times, accuracies = cnv_test.run_test(num_runs=5, num_flips=10000)\n",
     "print('10000 Bit Flips (10 Tests): Accuracy =', sum(accuracies) / len(accuracies))\n",
     "print('\\n')\n",
@@ -269,7 +302,7 @@
     "results, times, accuracies = cnv_test.run_test(\n",
     "    num_runs = 5,\n",
     "    num_flips = 10000,\n",
-    "    flip_word = True,\n",
+    "    word_size = 8,\n",
     "    target_type = FaultTest.TargetType.thresholds(),\n",
     "    target_layers = [0, 1]\n",
     ")\n",
@@ -292,10 +325,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from bnn.faults import CNVFaultTest, NetworkTest\n",
     "\n",
@@ -335,10 +366,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from bnn.faults import *\n",
+    "\n",
     "output_folder = \"/home/xilinx/jupyter_notebooks/bnn/faults/\"\n",
     "\n",
     "num_runs = 100\n",
@@ -347,41 +380,41 @@
     "cnv_tests = {\n",
     "    # cnvW1A1 Networks\n",
     "    'cnvW1A1': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1, cifar_files, cifar_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1, svhn_files, svhn_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1, gtsrb_files, gtsrb_labels), output_folder),\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1, cifar_files, cifar_labels)),\n",
+    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1, svhn_files, svhn_labels)),\n",
+    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1, gtsrb_files, gtsrb_labels)),\n",
     "    ],\n",
     "    'cnvW1A1-TMR': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_TMR, cifar_files, cifar_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_TMR, svhn_files, svhn_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_TMR, gtsrb_files, gtsrb_labels), output_folder),\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_TMR, cifar_files, cifar_labels)),\n",
+    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_TMR, svhn_files, svhn_labels)),\n",
+    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_TMR, gtsrb_files, gtsrb_labels)),\n",
     "    ],\n",
     "    'cnvW1A1-interleaved': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, cifar_files, cifar_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, svhn_files, svhn_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, gtsrb_files, gtsrb_labels), output_folder),\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, cifar_files, cifar_labels)),\n",
+    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, svhn_files, svhn_labels)),\n",
+    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, gtsrb_files, gtsrb_labels)),\n",
     "    ],\n",
     "\n",
     "    # cnvW1A2 Networks\n",
     "    'cnvW1A2': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2, cifar_files, cifar_labels), output_folder)\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2, cifar_files, cifar_labels))\n",
     "    ],\n",
     "#    'cnvW1A2-TMR': [\n",
-    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2_TMR, cifar_files, cifar_labels), output_folder)\n",
+    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2_TMR, cifar_files, cifar_labels))\n",
     "#    ],\n",
     "    'cnvW1A2-interleaved': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2_INTERLEAVED, cifar_files, cifar_labels), output_folder)\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2_INTERLEAVED, cifar_files, cifar_labels))\n",
     "    ],\n",
     "\n",
     "    # cnvW2A2 Networks\n",
     "    'cnvW2A2': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2, cifar_files, cifar_labels), output_folder)\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2, cifar_files, cifar_labels))\n",
     "    ],\n",
     "    'cnvW2A2-TMR': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2_TMR, cifar_files, cifar_labels), output_folder)\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2_TMR, cifar_files, cifar_labels))\n",
     "    ],\n",
     "    'cnvW2A2-interleaved': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2_INTERLEAVED, cifar_files, cifar_labels), output_folder)\n",
+    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2_INTERLEAVED, cifar_files, cifar_labels))\n",
     "    ],\n",
     "}"
    ]
@@ -392,19 +425,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weight_and_thresh = [TestType.weight_bit(), TestType.weight_word(), TestType.threshold_bit(), TestType.threshold_word()]\n",
-    "only_weights = [TestType.weight_bit(), TestType.weight_word()]\n",
+    "all_types = [\n",
+    "    NetworkTest.TestType.weight_bit(),\n",
+    "    NetworkTest.TestType.weight_word(),\n",
+    "    NetworkTest.TestType.threshold_bit(),\n",
+    "    NetworkTest.TestType.threshold_word()\n",
+    "]\n",
     "\n",
     "all_tests_flat = [test for lst in cnv_tests.values() for test in lst]\n",
     "\n",
-    "\n",
-    "# CNV Network uses passthrough activations for the final layer (layer 8), so that one will be handled differently.\n",
     "for test in all_tests_flat:\n",
-    "    test.test_network(num_runs, flip_counts, test_types=weight_and_thresh, target_layers=[0, 1, 2, 3, 4, 5, 6, 7])\n",
-    "\n",
-    "for test in all_tests_flat:\n",
-    "    test.test_network(num_runs, flip_counts, test_types=only_weights, target_layers=[8])"
+    "    test.test_network(output_folder, num_runs, flip_counts, test_types=all_types, target_layers=[0, 1, 2, 3, 4, 5, 6, 7, 8])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
